--- a/beginning/employees.html
+++ b/beginning/employees.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 05 - Employee Management Application</title>
+    <link src ="CSS/style.css" rel="stylesheet">
     <script src="js/employee-management.js"></script>
 </head>
 <body>
